--- a/index.html
+++ b/index.html
@@ -58,25 +58,25 @@
                             <p>PS5 Version</p>
                             <div class="progress"></div>
                         </div>
-                        <h2 class="percentage">60%</h2>
+                        <h2 class="percentage">40%</h2>
                     </div>
                     <div class="card">
-                        <img src="./images/assassins.png" alt="">
+                        <img src="./images/sackboy.png" alt="">
                         <div class="card-info">
-                            <h2>assassins Creed Valhalla</h2>
+                            <h2>Sackboy A Great Advanture</h2>
                             <p>PS5 Version</p>
-                            <div class="progress"></div>
+                            <div class="progress2"></div>
                         </div>
                         <h2 class="percentage">60%</h2>
                     </div>
                     <div class="card">
-                        <img src="./images/assassins.png" alt="">
+                        <img src="./images/spiderman.png" alt="">
                         <div class="card-info">
-                            <h2>assassins Creed Valhalla</h2>
+                            <h2>Spiderman Miles Morales</h2>
                             <p>PS5 Version</p>
-                            <div class="progress"></div>
+                            <div class="progress3"></div>
                         </div>
-                        <h2 class="percentage">60%</h2>
+                        <h2 class="percentage">80%</h2>
                     </div>
                 </div>
             </div>
